# ddos-proxy-rust

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  challenge.html  docker-compose.yml
old/: CLAUDE.md  Dockerfile  Makefile  README.md  challenge.html  docker-compose.yml  go.mod  go.sum
old/cmd/ddos-proxy/: main.go
old/internal/config/: config.go
old/internal/limiter/: ip_limiter.go  ip_limiter_test.go  limiter.go
old/internal/metrics/: metrics.go
old/internal/proxy/: reverse_proxy.go
old/internal/waf/: client.go  waf.go  waf_test.go
old/internal/xdp/: bpf_bpfeb.go  bpf_bpfel.go  xdp.c  xdp.go
src/: admin.rs  audit.rs  body.rs  cache.rs  config.rs  conninfo.rs  discord.rs  health.rs  lib.rs  limiter.rs  main.rs  metrics.rs  netmatch.rs  proxy.rs  slack.rs  tls.rs  util.rs  xdp.rs
src/bpf/: xdp.c
src/waf/: client.rs  mod.rs
tests/: smoke.rs
