[package]
name = "ddos-proxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "High-performance DDoS protection reverse proxy (Rust port of the Go implementation)"

[[bin]]
name = "ddos-proxy"
path = "src/main.rs"

[features]
default = []
# Linux-only L4 blocking via eBPF/XDP. Loads the precompiled bpf object with aya.
xdp = ["dep:aya", "dep:aya-log"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http1", "http2", "native-tokio", "tls12"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
futures-util = "0.3"

# TLS / ACME
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
instant-acme = "0.7"
rcgen = "0.13"
rustls-pemfile = "2"
x509-parser = "0.16"

# HTTP client for Turnstile verification and ACME host policy probe
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Templating (challenge.html)
minijinja = "2"

# Metrics
prometheus = "0.13"

# Logging (structured JSON, mirrors Go slog)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Crypto / encoding
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"

# Misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
regex = "1"
flate2 = "1"
once_cell = "1"
dashmap = "6"

# XDP (Linux only, optional)
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
